[package]
name = "rp2040-template"
version = "0.1.0"
edition = "2021"

[dependencies]
biquad = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
fugit = "0.3"
panic-reset = "0.1"
rand = { version = "0.8", default-features = false }
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.9", features = ["critical-section-impl"] }
rp2040-i2s = { git = "https://github.com/bschwind/rp2040-i2s.git", branch = "main" }
